# datacube-wps

./: .coveragerc  .gitignore  .mergify.yml  .pre-commit-config.yaml  .travis.yml  DEA_WPS_config.yaml  Dockerfile  README.md  VERSION.txt  check-code.sh  constraints.txt  datacube-wps-config.yaml  docker-compose.yml  dump.sql  example_mangrove_drill.xml  gunicorn.conf.py  lint-code.sh  populate-db.sh  pyproject.toml  pywps-dev.cfg  pywps.cfg  pywps.wsgi  requirements.txt  sample_geoglam_rapp.xml  setup-db.sh  setup.py  wps.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: docker-latest.yml  docker.yml  lint.yml  pypi.yaml  scan.yml  test.yml
datacube_wps/: __init__.py  impl.py  startup_utils.py
datacube_wps/processes/: __init__.py  fcdrill.py  geometrydrill.py  mangrovedrill.py  witprocess.py  wofsdrill.py
dea/aws/: rioenv.py
dea/geom/: __init__.py
docker/: config  wps-entrypoint.sh
locust/: Dockerfile  docker-compose.yaml  locust.conf  locustfile.py  request_data.xml  requirements.txt
processes/: fcdrill.py  geometrydrill.py  mangrovedrill.py  pixeldrill.py  polygondrill.py  utils.py  wofsdrill.py  wofsdrill_dc.py
templates/: base.html  home.html
tests/: conftest.py  test_api.py  test_app.py  test_request_parsing.py  test_s3.py  test_webapp.py
