[project]
name = "datacube-wps"
version = "0.1.0"
description = "datacube-wps is an implementation of the Web Processing Service standard from the Open Geospatial Consortium."
authors = [
    {name = "Digital Earth Australia", email = "earth.observation@ga.gov.au"},
]
dependencies = [
    "setuptools>=78.1.0",
    "altair",
    "altair_saver",
    "blinker",
    "datacube[postgres]",
    "flask",
    "gunicorn",
    "prometheus-flask-exporter",
    "pyarrow",
    "python-dateutil",
    "pywps",
    "sentry_sdk[flask]",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache License 2.0"}
keywords = ["ODC WPS OGC processing"]
maintainers = [
    {name = "Digital Earth Australia", email = "earth.observation@ga.gov.au"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "http://www.ga.gov.au/dea"
Downloads = "https://github.com/opendatacube/datacube-wps"

[tool.setuptools]
packages = ["datacube_wps"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
